fixed hieght issue on mobile canvas

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ a:visited {
 
 canvas {
   width: inherit !important;
+  height: 100vh !important;
 }
 
 .credit {
